<resources>
    <string name="app_name">Projeto calcula IMC</string>
    <string name="entrar">Entrar</string>
    <string name="text_cadastro">Ou cadastre-se clicando aqui</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="title_cadastro">Cadastre-se</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="text_logo">Fitness Feeding</string>
    <string name="hint_peso">Seu peso (Kg)</string>
    <string name="hint_idade">Sua idade</string>
    <string name="text_button_calcular">Calcular ingestão diaria</string>
    <string name="text_button_lembrete">Lembrete</string>
    <string name="digite_peso">Digite seu peso (Kg)</string>
    <string name="digite_altura">Digite sua altura (Exemplo 1.70)</string>
    <string name="text_button_alarme">Alarme</string>
    <string name="text_hora">00</string>
    <string name="text_dois_pontos">:</string>
    <string name="text_minutos">00</string>
    <string name="toast_informe_peso">Informe seu peso!</string>
    <string name="toast_informe_idade">Informe sua idade!</string>
    <string name="dialog_title">Redefinir dados</string>
    <string name="dialog_desc">Deseja excluir todos os dados existentes?</string>
    <string name="alarme_mensagem">Hora de beber água</string>
</resources>