<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="15sp"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CalculaIngestao">


        <TextView
            android:id="@+id/title_ingestao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="Ingestão de água"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_redefinir"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginStart="168dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/ic_refresh_black"
            app:layout_constraintStart_toEndOf="@+id/bt_voltar2"
            app:layout_constraintTop_toBottomOf="@+id/txt_hora" />

        <EditText
            android:id="@+id/edit_peso1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="88dp"
            android:gravity="center"
            android:hint="@string/hint_peso"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:padding="15dp"
            android:textColorHint="#A8000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_ingestao" />

        <EditText
            android:id="@+id/edit_idade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="88dp"
            android:gravity="center"
            android:hint="@string/hint_idade"
            android:inputType="number"
            android:maxLength="3"
            android:padding="15dp"
            android:textColorHint="#A8000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/edit_peso1"
            app:layout_constraintTop_toTopOf="@+id/title_ingestao" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_calcula_ingest"
            android:layout_width="360sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="44dp"
            android:background="@drawable/button"
            android:padding="15sp"
            android:text="@string/text_button_calcular"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_idade" />

        <TextView
            android:id="@+id/txt_resultado_ml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="---------"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_calcula_ingest" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_definir_lembrete"
            android:layout_width="140sp"
            android:layout_height="55sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/button"
            android:padding="10sp"
            android:text="@string/text_button_lembrete"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_resultado_ml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_definir_alarme"
            android:layout_width="140sp"
            android:layout_height="55sp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/button"
            android:padding="10sp"
            android:text="@string/text_button_alarme"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="@+id/bt_definir_lembrete"
            app:layout_constraintTop_toBottomOf="@+id/txt_resultado_ml" />

        <TextView
            android:id="@+id/txt_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="154dp"
            android:layout_marginTop="160dp"
            android:text="@string/text_hora"
            android:textColor="@android:color/black"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_resultado_ml" />

        <TextView
            android:id="@+id/txt_dois_pontos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/text_dois_pontos"
            android:textColor="@android:color/black"
            android:textSize="35sp"
            app:layout_constraintStart_toEndOf="@+id/txt_hora"
            app:layout_constraintTop_toBottomOf="@+id/txt_resultado_ml" />

        <TextView
            android:id="@+id/txt_minutos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/text_minutos"
            android:textColor="@android:color/black"
            android:textSize="35sp"
            app:layout_constraintStart_toEndOf="@+id/txt_dois_pontos"
            app:layout_constraintTop_toBottomOf="@+id/txt_resultado_ml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_voltar2"
            android:layout_width="100sp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:background="@color/dark_green"
            android:onClick="calcularImc"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:padding="6dp"
            android:text="Voltar"
            android:textAllCaps="false"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_minutos"
            tools:ignore="missing" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
